--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "lint": "run-s lint:all:*"
   },
   "dependencies": {
-    "@anttiviljami/serverless-stack-output": "0.3.1",
-    "serverless-puresec-cli": "1.2.0",
-    "serverless-python-requirements": "4.3.0"
+    "@anttiviljami/serverless-stack-output": "0.3.1"
   },
   "devDependencies": {
     "eslint": "5.12.0",
@@ -31,6 +29,8 @@
     "eslint-plugin-standard": "4.0.0",
     "markdownlint-cli": "0.13.0",
     "npm-run-all": "4.1.5",
-    "prettier": "1.15.3"
+    "prettier": "1.15.3",
+    "serverless-puresec-cli": "1.2.0",
+    "serverless-python-requirements": "4.3.0"
   }
 }
