--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,8 +16,9 @@ cache:
   paths:
     - node_modules/
     - venv/
+
 install python:
-  stage: build-python
+  stage: build
   image: python:3.7-stretch
   script:
     - python3 -m venv  venv
