--- a/serverless.yml
+++ b/serverless.yml
@@ -25,7 +25,7 @@ custom:
     handler: scripts/output.process
     file: stack.json
   pythonRequirements:
-    dockerizePip: true
+    dockerizePip: false
     layer: false  #Put dependencies into a Lambda Layer.
 
 provider:
