--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -92,6 +92,7 @@ staging:
 e2e tests staging:
   stage: e2e tests
   script:
+    - ls # TODO REMOVE:: For testing is the stack.json is there
     - source venv/bin/activate
     - pytest e2e
   only:
