No clue why it's not working so I'm just gonna spam a bunch of stuff

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -89,7 +89,10 @@ staging:
   variables:
     STAGE: staging # target stage of artifact from other repo
   script:
+    - . <(curl -sL https://gitlab.com/morph027/gitlab-ci-helpers/raw/master/check-vars.sh)
+    - check_vars
     - . <(curl -sL https://gitlab.com/morph027/gitlab-ci-helpers/raw/master/get-last-successful-build-artifact.sh)
+    - download_latest
     - ls
     - sls deploy -s staging -v
   environment:
