--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ stages:
 variables:
   dev: 'dev-$CI_COMMIT_REF_SLUG'
   # Artifact from other repo settings
-  OUT_FILE: input-stack.json
+  # OUT_FILE: input-stack.zip
   REF: master
   BASE_URL: https://gitlab.com
   PROJECT: 13697110 # project id of serverless stateful gitlab ci
@@ -28,12 +28,9 @@ install python:
   variables:
     STAGE: staging
   script:
-    - printenv
-    - . <(curl -sL https://gitlab.com/morph027/gitlab-ci-helpers/raw/master/check-vars.sh)
-    - check_vars | echo
-    - . <(curl -sL https://gitlab.com/morph027/gitlab-ci-helpers/raw/master/get-last-successful-build-artifact.sh) | echo
-    - ls
+    - . <(curl -sL https://gitlab.com/morph027/gitlab-ci-helpers/raw/master/get-last-successful-build-artifact.sh)
     - download_latest
+    - ls
     - python3 -m venv  venv
     - source venv/bin/activate
     - pip3 install -r dev-requirements.txt
