--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ install python:
   variables:
     STAGE: staging
   script:
-    - . <(curl -sL https://gitlab.com/morph027/gitlab-ci-helpers/raw/master/get-last-successful-build-artifact.sh)
+    - ./get-last-successful-build-artifact.sh
     - download_latest
     - ls
     - python3 -m venv  venv
