--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,7 @@ install python:
   variables:
     STAGE: staging
   script:
+    - apt-get install jq
     - ./get-last-successful-build-artifact.sh
     - download_latest
     - ls
