--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "markdownlint-cli": "0.13.0",
     "npm-run-all": "4.1.5",
     "prettier": "1.15.3",
+    "serverless-domain-manager": "3.3.0",
     "serverless-puresec-cli": "1.2.0",
     "serverless-python-requirements": "4.3.0"
   }
